# wargames

./: .gitignore  LICENSE  README.md  requirements.txt  wargames_map.py  wargames_map_old.py
wargames_cpp/: CMakeLists.txt  README.md  generate_glad.py  setup_glad.sh
wargames_cpp/include/: Aircraft.hpp  Common.hpp  Explosion.hpp  Missile.hpp  Renderer.hpp  VectorMap.hpp
wargames_cpp/include/glad/: gl.h
wargames_cpp/shaders/: barrel.frag  basic.vert  chromatic.frag  composite.frag
wargames_cpp/src/: Aircraft.cpp  Explosion.cpp  Missile.cpp  Renderer.cpp  VectorMap.cpp  main.cpp
wargames_web/: .vercelignore  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  test.html  vercel.json
wargames_web/css/: style.css
wargames_web/data/: ne_110m_admin_0_countries.json  ne_110m_coastline.json  screen-configs.json  targets.json
wargames_web/scripts/: convert-shapefiles.js
wargames_web/shaders/: barrel.frag  basic.frag  basic.vert  bloom.frag  chromatic.frag  composite.frag  fullscreen.vert
wargames_web/src/: Aircraft.js  AssetLoader.js  Explosion.js  Missile.js  Renderer.js  ScreenManager.js  SimulationState.js  TicTacToeGame.js  VectorMap.js  main.js  utils.js
